<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/relative_question_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="12dp">

                <ImageView
                    android:id="@+id/imglogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:src="@drawable/datatheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/buttonSectionOne"
                    android:layout_width="375dp"
                    android:layout_height="74dp"
                    android:layout_margin="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/style_button_question_one"
                    android:gravity="center"
                    android:text="@string/election_one"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/buttonSectionTwo"
                    android:layout_width="375dp"
                    android:layout_height="74dp"
                    android:layout_margin="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/style_button_question_two"
                    android:gravity="center"
                    android:text="@string/election_two"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSectionOne" />

                <TextView
                    android:id="@+id/buttonSectionThree"
                    android:layout_width="375dp"
                    android:layout_height="74dp"
                    android:layout_margin="12dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/style_button_question_three"
                    android:gravity="center"
                    android:text="@string/election_three"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonSectionTwo"
                    app:layout_constraintVertical_bias="0.161" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/btnVerEncuestas"
                    android:layout_width="375dp"
                    android:layout_height="50dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/style_border"
                    android:gravity="center"
                    android:text="@string/stored_surveys"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.444"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.666" />

                <TextView
                    android:id="@+id/btnVerGraficas"
                    android:layout_width="375dp"
                    android:layout_height="50dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/style_border"
                    android:gravity="center"
                    android:text="@string/graphics"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnVerEncuestas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>