<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IU.QuestionTwo.QuestionTwo">
    <ScrollView
        android:id="@+id/scrollSectionOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:id="@+id/relative_question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/buttonquestionone"
                        android:layout_width="375dp"
                        android:layout_height="74dp"
                        android:layout_margin="12dp"
                        android:background="@color/election2"
                        android:gravity="center"
                        android:text="@string/election_two"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:layout_editor_absoluteY="16dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <TextView
                        android:id="@+id/question1"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/question_section2_one"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.444"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/questionSection2Number1"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:hint="@string/numerical_answer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question1" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <TextView
                        android:id="@+id/question2"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/question_section2_two"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.444"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/questionSection2Number2"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:hint="@string/numerical_answer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question2" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <TextView
                        android:id="@+id/question3"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/question_section2_three"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.444"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/questionSection2Number3"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:hint="@string/numerical_answer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question3" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <TextView
                        android:id="@+id/question4"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/question_section2_four"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.444"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/questionSection2Number4"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:hint="@string/numerical_answer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question4" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <TextView
                        android:id="@+id/question5"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/question_section2_five"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.444"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/questionSection2Number5"
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned"
                        android:hint="@string/numerical_answer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question5" />


                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <TextView
                        android:id="@+id/btnQuestionSectionTwo"
                        android:layout_width="375dp"
                        android:layout_height="50dp"
                        android:text="@string/end_survey"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:background="@drawable/style_border"
                        android:layout_margin="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>